Fixed sidebar overflow

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,7 +21,7 @@ body{
 	font-family: 'Poppins', sans-serif;
 
 	display: grid;
-	grid-template: 1fr 12fr / 1fr 3.5fr;
+	grid-template: 1fr 5fr / 1fr 3.5fr;
 }
 
 .sidebar{
